# cognitive-guard

./: .cognitive-guard.example.yml  .cognitive-guard.yml  .gitignore  .pre-commit-config.yaml  BANNER.txt  CHANGELOG.md  CI_CD_FIX_REPORT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  FIXING_CI_CD.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  INNOVATION_ROADMAP.md  INSTALL_AND_TEST.md  LICENSE  Makefile  NAVIGATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  SUMMARY.md  USABILITY_IMPROVEMENTS.md  pyproject.toml  verify_setup.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-simple.yml  ci.yml  lint.yml  publish.yml  release.yml  tests.yml
cognitive_guard/: __init__.py  cli.py
cognitive_guard/analyzers/: __init__.py
cognitive_guard/core/: __init__.py  complexity.py  config.py  scanner.py
cognitive_guard/hooks/: __init__.py  installer.py
cognitive_guard/parsers/: __init__.py
cognitive_guard/tui/: __init__.py  app.py
cognitive_guard/utils/: __init__.py  stats.py
docs/: ARCHITECTURE.md  README.md
examples/: .cognitive-guard.yml  demo.sh  demo_tui.sh  docstring_demo.py  sample_code.js  sample_code.ts  sample_code2.py  test_tui.py
src/: cli.py
src/core/: __init__.py  complexity.py  scanner.py
src/utils/: __init__.py
tests/: conftest.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: test_complexity.py  test_config.py  test_scanner.py
